# python_vs_rust

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
abbreviations/: index.html
common/abbreviations/: index.html
docs/: index.md  index.uk.md
docs/en/: index.md
docs/en/pages/: first_steps.md
docs/pages/: first_steps.md  hello_world.md  printing.md  types.md
docs/src/hello_world/: hello_world.py
docs/src/printing/: formatting_1.rs  formatting_1_py_output.txt
docs/src/types/: types.md
docs/src/types/_sizes/: sizes_1.py  sizes_1.rs
docs/src/types/boolean/: bool.py  bool.rs  bool_2.py  bool_size.rs
docs/uk/: index.md
docs/uk/pages/: first_steps.md
pages/first_steps/: index.html
pages/hello_world/: index.html
pages/printing/: index.html
pages/types/: index.html
search/: search_index.json
src/hello_world/: hello_world_short.rs
src/printing/: formatting_1.py  formatting_1_rs_output.txt  printing_stderr_1.py  printing_stderr_1.rs  printing_stdout_1.py  printing_stdout_1.rs
src/types/boolean/: bool_2.rs  bool_2_py_output.txt  bool_2_rs_output.txt  bool_size.py
uk/: index.html
uk/abbreviations/: index.html
uk/pages/first_steps/: index.html
uk/pages/hello_world/: index.html
uk/pages/printing/: index.html
uk/pages/types/: index.html
