[tool.poetry]
name = "python-vs-rust"
version = "0.0.1"
description = "Documentation and examples that compares code blocks for Python and Rust."
authors = ["Kostiantyn Salnykov <kostiantyn.salnykov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_vs_rust"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.4"
pymdown-extensions = "^10.7"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-static-i18n = {extras = ["material"], version = "^1.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
